# Ai_management_backend

./: .gitignore  Pipfile  alembic.ini  app.py  directory_utils.py  pyproject.toml  websocket_client.py
annotations/johndoe/#3rd Project/: 21photos.xml
annotations/johndoe/NLP/: 10photos.xml  113d.xml  11photo.xml  11photos.xml  12photos.json  12photos.txt  12photos.xml  133d.xml  17photo.xml  22photo.xml  22photos.xml  22programming.txt
annotations/johndoe/New Project/: 17photo.xml  21photos.xml  22photo.xml  22photos.xml
authentication/: auth_settings.py  auth_utils.py  schema.py
database_utils/: database.py  models.py
migrations/: env.py
migrations/versions/: 4dcb3abf8a11_create_account_table.py
sharepoint_utils/: directory_utils.py
tests/: test.py  test_app.py
